--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>I'm a computer science student in ryerson. My current interest is in computer graphics.</p>
+					<p>I'm a computer science student in Ryerson. My current interest is in computer graphics.</p>
 					<p>Below you will find information on my skills and some projects I have made or am working on.</p>
 					<p>
 						<ul class="fh5co-social-icons">
