--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="icon" href="favicon.ico">
-	<title> Jonathan Ong's Person Website</title>
+	<title> Jonathan Ong's Personal Website</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Welcome to my site! Here you can see my projects and a little about me." />
 	<meta name="keywords" content="Jonathan Ong, Jonathan, Ong, personal site, programmer, html5, css3, mobile first, responsive" />
