--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/profile.jpg);"></div>
 							<h1><span>Jonathan Ong</span></h1>
-							<h3><span>Computer Science Undergrand</span></h3>
+							<h2><span>3rd Year Computer Science Undergrand</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://www.linkedin.com/in/jonathan-ong-96b6371a3/"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://github.com/JayceSoul"><i class="icon-github2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/jonathan-ong-96b6371a3/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://github.com/JayceSoul" target="_blank"><i class="icon-github2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -91,8 +91,8 @@
 					<p>Below you will find information on my skills and some projects I have made or am working on.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://www.linkedin.com/in/jonathan-ong-96b6371a3/"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="https://github.com/JayceSoul"><i class="icon-github2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/jonathan-ong-96b6371a3/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://github.com/JayceSoul" target="_blank"><i class="icon-github2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -108,7 +108,7 @@
 			<div class="services-padding">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>My Skils</h2>
+						<h2>My Skills</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -116,8 +116,11 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<div class="feature-copy">
-								<h3>HTML5 & CSS</h3>
-								<p>Front end design</p>
+								<div class="icon">
+									<i class="icon-browser"></i>
+								</div>
+								<h2>Front End Design</h2>
+								<h3>HTML & CSS, Bootstrap, Semantic UI, React</h3>
 							</div>
 						</div>
 					</div>
@@ -125,8 +128,11 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<div class="feature-copy">
-								<h3>MySQL</h3>
-								<p>Database management</p>
+								<div class="icon">
+									<i class="icon-chart"></i>
+								</div>
+								<h2>Database management</h2>
+								<h3>MySQL, Orcale, Flask, Django, SQLite3</h3>
 							</div>
 						</div>
 
@@ -134,8 +140,11 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<div class="feature-copy">
-								<h3>Programing</h3>
-								<p>Java, Python, C++</p>
+								<div class="icon">
+									<i class="icon-code"></i>
+								</div>
+								<h2>Programing</h2>
+								<h3>Java, Python, C++</h3>
 							</div>
 						</div>
 					</div>
@@ -153,18 +162,20 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="http://jonathanong.pythonanywhere.com/home" class="work" style="background-image: url(images/flasksite.PNG);">
+					<a href="http://jonathanong.pythonanywhere.com/home" target="_blank" class="work" style="background-image: url(images/flasksite.PNG);">
 						<div class="desc">
 							<h3>Flask Blog</h3>
 							<span>A functional blog made using flask and semantic ui</span>
+							<span>Done: 2020</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://github.com/JayceSoul/Java_Card_Game" class="work" style="background-image: url(images/javacardgame.PNG);">
+					<a href="https://github.com/JayceSoul/Java_Card_Game" target="_blank" class="work" style="background-image: url(images/javacardgame.PNG);">
 						<div class="desc">
-							<h3>Java Card Game Project</h3>
+							<h3>Java Card Game</h3>
 							<span>A card game made using java</span>
+							<span>Done: 2017</span>
 						</div>
 					</a>
 				</div>
